--- a/README
+++ b/README
@@ -2,4 +2,10 @@ Sample using OpenAI models with function calling and json responses
 Based on this diagram by R. Jacobs
 ![Alt text](eventClassification.jpg?raw=true "Title")
 
-To run it use visual studio or dotnet commandline
+You will need an OpenAI Api Key to run this sample
+
+Get one here https://platform.openai.com/docs/overview
+When you sign up they give you $10 credit so should be able to run this for free
+Generate an api key and add it to the appsettings.Development.json file
+
+The run the app using visual studio or dotnet commandline
